--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "@vueuse/core": "^10.7.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "lucide-vue-next": "^0.309.0",
+    "navigator": "^1.0.1",
+    "platform": "^1.3.6",
     "radix-vue": "^1.3.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vee-validate": "^4.12.4",
+    "vue-command-palette": "^0.2.3",
     "zod": "^3.22.4"
   }
 }
