--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lucide-vue-next": "^0.309.0",
     "navigator": "^1.0.1",
     "platform": "^1.3.6",
+    "process": "^0.11.10",
     "radix-vue": "^1.3.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
