--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@radix-icons/vue": "^1.0.0",
     "@vee-validate/zod": "^4.12.4",
+    "@vercel/analytics": "^1.1.1",
     "@vueuse/core": "^10.7.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
