--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@auth/core": "^0.17.0",
     "@formkit/auto-animate": "^0.8.1",
+    "@hebilicious/authjs-nuxt": "^0.3.5",
     "@nuxt/image": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
     "@radix-icons/vue": "^1.0.0",
@@ -32,6 +34,7 @@
     "clsx": "^2.1.0",
     "lucide-vue-next": "^0.309.0",
     "navigator": "^1.0.1",
+    "next-auth": "^4.24.5",
     "platform": "^1.3.6",
     "process": "^0.11.10",
     "radix-vue": "^1.3.0",
