--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "platform": "^1.3.6",
     "process": "^0.11.10",
     "radix-vue": "^1.3.0",
+    "rough-notation": "^0.5.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vee-validate": "^4.12.4",
