--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@vueuse/core": "^10.7.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel": "^8.0.0-rc19",
+    "embla-carousel-autoplay": "^8.0.0-rc19",
+    "embla-carousel-vue": "^8.0.0-rc19",
     "lucide-vue-next": "^0.309.0",
     "navigator": "^1.0.1",
     "next-auth": "^4.24.5",
