--- a/package.json
+++ b/package.json
@@ -13,39 +13,39 @@
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "nuxt": "^3.10.2",
-    "nuxt-icon": "^0.6.8",
-    "nuxt-typed-router": "^3.5.1",
-    "shadcn-nuxt": "^0.9.0",
-    "typescript": "^5.3.3",
-    "vue": "^3.4.19",
-    "vue-router": "^4.2.5"
+    "nuxt": "^3.10.3",
+    "nuxt-icon": "^0.6.9",
+    "nuxt-typed-router": "^3.6.1",
+    "shadcn-nuxt": "^0.10.2",
+    "typescript": "^5.4.2",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.1",
     "@hebilicious/authjs-nuxt": "^0.3.5",
-    "@nuxt/image": "^1.3.0",
+    "@nuxt/image": "^1.4.0",
     "@pinia/nuxt": "^0.5.1",
     "@radix-icons/vue": "^1.0.0",
-    "@vee-validate/zod": "^4.12.5",
+    "@vee-validate/zod": "^4.12.6",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
-    "@vueuse/core": "^10.8.0",
+    "@vueuse/core": "^10.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "embla-carousel": "^8.0.0-rc23",
-    "embla-carousel-autoplay": "^8.0.0-rc23",
-    "embla-carousel-vue": "^8.0.0-rc23",
-    "lucide-vue-next": "^0.335.0",
+    "embla-carousel": "^8.0.0",
+    "embla-carousel-autoplay": "^8.0.0",
+    "embla-carousel-vue": "^8.0.0",
+    "lucide-vue-next": "^0.358.0",
     "navigator": "^1.0.1",
-    "next-auth": "^4.24.6",
+    "next-auth": "^4.24.7",
     "platform": "^1.3.6",
     "process": "^0.11.10",
-    "radix-vue": "^1.4.7",
+    "radix-vue": "^1.5.2",
     "rough-notation": "^0.5.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "vee-validate": "^4.12.5",
+    "vee-validate": "^4.12.6",
     "vue-command-palette": "^0.2.3",
     "vue3-lottie": "^3.2.0",
     "zod": "^3.22.4"
