--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.3.2",
+    "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "@vue-email/nuxt": "^0.8.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.23.0",
     "nuxt": "^3.10.3",
     "nuxt-icon": "^0.6.9",
     "nuxt-typed-router": "^3.6.1",
